<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorOffBlack">

    <android.support.v7.widget.Toolbar
        android:id="@+id/primary_toolbar"
        android:layout_width="match_parent"
        android:layout_height="112dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="?attr/actionBarSize"
        app:cardBackgroundColor="@color/colorOffBlack">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignTop="@+id/cardView"
            android:layout_marginTop="11dp"
            android:orientation="vertical">

            <android.support.v7.widget.Toolbar
                android:id="@+id/card_view_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:title="Smart Parking"
                app:titleTextColor="@color/colorWhite" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:alpha="0.12"
                android:background="@color/colorWhite" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="50dp"
                    android:text="@string/hours_left"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_alignTop="@+id/textView"
                    android:layout_marginEnd="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_toLeftOf="@+id/textView"
                    android:layout_toStartOf="@+id/textView"
                    android:background="@drawable/clock"
                    android:contentDescription="@string/clock_image" />

                <ProgressBar
                    android:id="@+id/progressbar"
                    style="@style/Widget.AppCompat.ProgressBar"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="64dp"
                    android:max="100"
                    android:progress="100" />

                <TextView
                    android:id="@+id/hours_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/progressbar"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="80dp"
                    android:text=""
                    android:textColor="@color/colorWhite"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/hint_notifications_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/progressbar"
                    android:layout_centerHorizontal="true"
                    android:text="@string/hint_text"
                    android:textSize="12sp" />

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_alignTop="@id/hint_notifications_label"
                    android:layout_marginEnd="2dp"
                    android:layout_marginRight="4dp"
                    android:layout_toLeftOf="@id/hint_notifications_label"
                    android:layout_toStartOf="@id/hint_notifications_label"
                    android:background="@drawable/notification"
                    android:contentDescription="@string/notifications_image" />

            </RelativeLayout>


        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:src="@drawable/key"
        app:backgroundTint="@color/colorPrimary"
        app:fabSize="normal" />
</RelativeLayout>