<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/stats_image"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:background="@drawable/stats" />

    <TextView
        android:id="@+id/stats_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/stats_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="Stats"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/stats_text"
        android:layout_margin="32dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/last_visit_image"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@drawable/last_visit"
                android:contentDescription="@string/last_visit_date" />

            <TextView
                android:id="@+id/last_visit_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:text="Last visit was on:"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/last_visit_date_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/last_visit_label"
                android:layout_centerHorizontal="true"
                android:text="Monday, 16th Jan 2018"
                android:textColor="@color/colorWhite"
                android:textSize="16sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:alpha="0.12"
            android:background="@color/colorWhite" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">

            <ImageView
                android:id="@+id/times_parked_image"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@drawable/times_parked"
                android:contentDescription="@string/times_parked" />

            <TextView
                android:id="@+id/times_parked_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:text="Times Parked:"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/times_parked_count_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/times_parked_label"
                android:layout_centerHorizontal="true"
                android:text="5"
                android:textColor="@color/colorWhite"
                android:textSize="16sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:alpha="0.12"
            android:background="@color/colorWhite" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">

            <ImageView
                android:id="@+id/points_image"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@drawable/points"
                android:contentDescription="@string/points_count" />

            <TextView
                android:id="@+id/points_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:text="Points:"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/points_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/points_text"
                android:layout_centerHorizontal="true"
                android:text="100"
                android:textColor="@color/colorWhite"
                android:textSize="16sp" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:alpha="0.12"
            android:background="@color/colorWhite" />
    </LinearLayout>

</RelativeLayout>